<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/anasayfaMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#f37a1b"
        android:icon="@drawable/anasayfa_icon"
        android:title="@string/menuTitle1"
        android:visible="true" />

    <item
        android:id="@+id/trendyolGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/go"
        android:title="@string/menuTitle2" />

    <item
        android:id="@+id/favorilerim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/favori_icon"
        android:title="@string/menuTitle3" />

    <item
        android:id="@+id/sepet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/sepet_icon"
        android:title="@string/menuTitle4" />

    <item
        android:id="@+id/hesabim"
        android:icon="@drawable/hesabim_icon"
        android:title="@string/menuTitle5" />
</menu>
